objects/Intranet_Item__c.object
<CustomObject>
    <fields>
        <fullName>Link_Action__c</fullName>
        <inlineHelpText>How should the link open the content?</inlineHelpText>
        <label>Link Action</label>
        <picklist>
            <controllingField>Link_Type__c</controllingField>
            <picklistValues>
                <fullName>Rate Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open in Content Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open in New Tab/Window</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_Behaviour__c</fullName>
        <description>Created for CR-20150219-8692</description>
        <formula>IF(
	TEXT(Link_Action__c) = &apos;Open in New Tab/Window&apos;, 
	&apos;_blank&apos;, 
	IF(
		TEXT(Link_Action__c) = &apos;Open in Content Viewer&apos;,
		&apos;content&apos;,
		&apos;&apos;
	)
)</formula>
        <label>Link Behaviour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <label>Link Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_URL_Validated__c</fullName>
        <description>Created for CR-20150219-8692</description>
        <label>Link URL (Validated)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <description>Reference Id for data loads</description>
        <label>Load Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <inlineHelpText>Location of the Event/Item</inlineHelpText>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <inlineHelpText>Office Location Code - used to match with Workday</inlineHelpText>
        <label>Location Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Main_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Additional Categories can be entered as Topics</inlineHelpText>
        <label>Main Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Item__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Settings - Category</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Item__c</referenceTo>
        <relationshipLabel>Intranet Items (Main Category)</relationshipLabel>
        <relationshipName>Intranet_Items4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <label>Office Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Notes__c</fullName>
        <label>Office Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Short_Name__c</fullName>
        <label>Office Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permalink_Validated__c</fullName>
        <description>Created for CR-20150219-8692</description>
        <label>Permalink (Validated)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Permalink__c</fullName>
        <description>Populated by a trigger</description>
        <inlineHelpText>Permanent Friendly link to this item.</inlineHelpText>
        <label>Permalink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Poll_Id__c</fullName>
        <inlineHelpText>Chatter Poll Feed Id (fId)</inlineHelpText>
        <label>Poll Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poll_URL__c</fullName>
        <formula>IF(NOT(ISBLANK(Poll_Id__c)),HYPERLINK(&apos;/&apos;+Poll_Id__c,&apos;Link to Chatter Poll&apos;,&apos;_blank&apos;),&apos;&apos;)</formula>
        <inlineHelpText>Link to Chatter Poll</inlineHelpText>
        <label>Poll URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <inlineHelpText>Date to Start showing item</inlineHelpText>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rating_Count__c</fullName>
        <inlineHelpText>Counts the number of rating this item has received.</inlineHelpText>
        <label>Rating Count</label>
        <summaryFilterItems>
            <field>Intranet_Utilization__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Intranet_Utilization__c.Intranet_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Record_Type_Category__c</fullName>
        <formula>IF( BEGINS(RecordType.Name, &apos;Item&apos;), &apos;Item&apos;,
IF( BEGINS(RecordType.Name, &apos;Setting&apos;), &apos;Setting&apos;,
&apos;Other&apos;))</formula>
        <inlineHelpText>Based on record type name</inlineHelpText>
        <label>Record Type Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Firm_Initiative_Id__c</fullName>
        <inlineHelpText>Record Id for related RFI</inlineHelpText>
        <label>Related Firm Initiative Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Firm_Initiative_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Related_Firm_Initiative_Id__c,&apos;Firm Initiative Link&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Firm Initiative Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Name__c</fullName>
        <label>Room Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Number__c</fullName>
        <label>Room Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Exclusion_Auto__c</fullName>
        <formula>OR(
/* Manual Override */
/*ISPICKVAL(Search_Exclusion_Manual__c,&apos;Exclude from Search&apos;),*/
/* Status Values */
ISPICKVAL(Active_Status__c,&apos;Hidden&apos;),
NOT(ISPICKVAL(Approval_Status__c,&apos;Approved&apos;)),
/* Record Types */
RecordType.Name = &apos;Settings - Category&apos;,
RecordType.Name = &apos;Settings - Color Set&apos;,
RecordType.Name = &apos;Settings - Image Set&apos;,
RecordType.Name = &apos;Settings - Office&apos;,
/* Item Types */
ISPICKVAL(Item_Type__c,&apos;Ad Item&apos;),
ISPICKVAL(Item_Type__c,&apos;Category&apos;),
ISPICKVAL(Item_Type__c,&apos;Color Set&apos;),
ISPICKVAL(Item_Type__c,&apos;Image Set&apos;),
ISPICKVAL(Item_Type__c,&apos;Component Link&apos;),
ISPICKVAL(Item_Type__c,&apos;Office Location&apos;),
ISPICKVAL(Item_Type__c,&apos;Web Link&apos;),
ISPICKVAL(Item_Type__c,&apos;Quick Link&apos;),
ISPICKVAL(Item_Type__c,&apos;Page Link&apos;),
ISPICKVAL(Item_Type__c,&apos;Poll Item&apos;),
ISPICKVAL(Item_Type__c,&apos;Food Link&apos;),
ISPICKVAL(Item_Type__c,&apos;System Status&apos;)
)</formula>
        <inlineHelpText>Exclude from Boardroom Search - based on Active Status, Approval Status, Item Type, Record Type, and/or manual exclusion</inlineHelpText>
        <label>Search Exclusion (Auto)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Exclusion_Manual__c</fullName>
        <description>Designed as a picklist so Content Manager user has to make more of a physical change to exlude an item, as opposed to a Checkbox</description>
        <inlineHelpText>Set to &apos;Exclude from Search&apos; to hide Item from Search.  Auto-excluded items cannot be included in Search individually.</inlineHelpText>
        <label>Search Exclusion (Manual)</label>
        <picklist>
            <picklistValues>
                <fullName>Exclude from Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_1_Action__c</fullName>
        <inlineHelpText>How to open the link</inlineHelpText>
        <label>Secondary Link 1 Action</label>
        <picklist>
            <picklistValues>
                <fullName>Open in Content Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open in New Tab/Window</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_1_Location_Validated__c</fullName>
        <description>Created for CR-20150219-8692</description>
        <label>Secondary Link 1 Location Validated</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_1_Location__c</fullName>
        <inlineHelpText>Link to more info, FAQ, etc directly related to the main item</inlineHelpText>
        <label>Secondary Link 1 Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_1_Name__c</fullName>
        <inlineHelpText>Display name for the link</inlineHelpText>
        <label>Secondary Link 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_1_URL__c</fullName>
        <inlineHelpText>Link to more info, FAQ, etc directly related to the main item</inlineHelpText>
        <label>Secondary Link 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_2_Action__c</fullName>
        <inlineHelpText>How to open the link</inlineHelpText>
        <label>Secondary Link 2 Action</label>
        <picklist>
            <picklistValues>
                <fullName>Open in Content Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open in New Tab/Window</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_2_Location__c</fullName>
        <inlineHelpText>Link to more info, FAQ, etc directly related to the main item</inlineHelpText>
        <label>Secondary Link 2 Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_2_Name__c</fullName>
        <inlineHelpText>Display name for the link</inlineHelpText>
        <label>Secondary Link 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Link_2_URL__c</fullName>
        <inlineHelpText>Link to more info, FAQ, etc directly related to the main item</inlineHelpText>
        <label>Secondary Link 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Set_Type__c</fullName>
        <label>Set Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Expand_Link__c</fullName>
        <description>Used only for Flexible container items</description>
        <formula>IF(ISPICKVAL(Item_Type__c,&quot;Talent Item&quot;) || ISPICKVAL(Item_Type__c,&quot;Job Item&quot;),
TRUE, FALSE)</formula>
        <inlineHelpText>Determines if the link for View More, etc is visible</inlineHelpText>
        <label>Show Expand Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Main_Image_in_Content_Viewer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, this uses the Main Content image as the main one in the Content Viewer</inlineHelpText>
        <label>Show Main Image in Content Viewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>For US, use 2 letter state abbreviation</inlineHelpText>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubHeading__c</fullName>
        <inlineHelpText>Used to group items under a common sub-header</inlineHelpText>
        <label>SubHeading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Box_Back_Color_Code__c</fullName>
        <inlineHelpText>Color to use for Text Box Background</inlineHelpText>
        <label>Text Box Back Color Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Box_Back_Color__c</fullName>
        <formula>Color_Set__r.Text_Box_Back_Color_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Box Back Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Box_Text_Color__c</fullName>
        <formula>Color_Set__r.Text_Color_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Box Text Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Box_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Text Box Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Color_Code__c</fullName>
        <inlineHelpText>Color to use for Text</inlineHelpText>
        <label>Text Color Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <label>Total Rating</label>
        <summarizedField>Intranet_Utilization__c.Rating__c</summarizedField>
        <summaryFilterItems>
            <field>Intranet_Utilization__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Intranet_Utilization__c.Intranet_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Track_Frequent_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a click should be tallied for the user in the Intranet My Apps custom setting for the user.</description>
        <inlineHelpText>Should this item be tracked as a Frequently Used App for each user?</inlineHelpText>
        <label>Track Frequent App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Utilization__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Should Utilization be tracked for this item?</inlineHelpText>
        <label>Track Utilization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trend_Type__c</fullName>
        <inlineHelpText>What is the trend?</inlineHelpText>
        <label>Trend Type</label>
        <picklist>
            <picklistValues>
                <fullName>Most Popular Last 24 Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Most Popular Last 7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Most Downloaded Last 7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trending_View_Count__c</fullName>
        <inlineHelpText>View = Every request to a page</inlineHelpText>
        <label>Trending View Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trending_Visit_Count__c</fullName>
        <inlineHelpText>Visit = Browsing session, regardless of number of page requests or downloads</inlineHelpText>
        <label>Trending Visit Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Unique External Key for integrations</inlineHelpText>
        <label>Unique Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Update_Weather_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is true, the weather should be updated on this record now.</description>
        <label>Update Weather Now?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_Link_Image_Url__c</fullName>
        <description>Hold Image url for the Youtube and Vimeo link.</description>
        <label>Video Link Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>View_Count__c</fullName>
        <inlineHelpText>Number of times item has been selected or opened for view</inlineHelpText>
        <label>View Count</label>
        <summaryForeignKey>Intranet_Utilization__c.Intranet_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Weather_Response__c</fullName>
        <inlineHelpText>Response from Forecast.io Update in JSON format</inlineHelpText>
        <label>Weather Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Intranet Item</label>
    <listViews>
        <fullName>Ashley_Strawser_Hidden_Job_Item</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Job Item</value>
        </filters>
        <filters>
            <field>Active_Status__c</field>
            <operation>equals</operation>
            <value>Hidden</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Ashley</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Strawser</value>
        </filters>
        <label>Item Type- Job Item (Strawser Hidden)</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Ad_Item</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Job Item</value>
        </filters>
        <filters>
            <field>Active_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Ashley</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Strawser</value>
        </filters>
        <label>Item Type - Job Item (Strawser Active)</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_App_Link</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>App Link,Firm App Link</value>
        </filters>
        <label>Item Type - Firm App Link</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Component_Link</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Component Link</value>
        </filters>
        <label>Item Type - Component Link</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Favorite_Link</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Favorite Link</value>
        </filters>
        <label>Item Type - Favorite Link</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Food_Link</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Food Link</value>
        </filters>
        <label>Item Type - Food Link</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Job_Item</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Job Item</value>
        </filters>
        <label>Item Type - Job Item</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Member_Event</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <columns>Event_End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Member Event</value>
        </filters>
        <label>Item Type - Member Event</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Member_Impact_Story</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Member Impact Story</value>
        </filters>
        <label>Item Type - Member Impact</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Menu_Link</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Menu Link</value>
        </filters>
        <label>Item Type - Menu Link</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_News_Item</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Category__c</columns>
        <columns>Active_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Office_Short_Name__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Image_Set_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>News Item</value>
        </filters>
        <label>Item Type - News Item</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Office_Event</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Office Event</value>
        </filters>
        <label>Item Type - Office Event</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Page_Action_Link</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Page Action Link</value>
        </filters>
        <label>Item Type - Page Action Link</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Page_Bookmark</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Page Bookmark</value>
        </filters>
        <label>Item Type - Page Bookmark</label>
    </listViews>
    <listViews>
        <fullName>Item_Type_Page_Section</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Item_Title__c</columns>
        <columns>Item_Subtitle__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Page Section</value>
        </filters>
        <label>Item Type - Page Section</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Items</pluralLabel>
    <recordTypes>
        <fullName>Item_Ad</fullName>
        <active>true</active>
        <description>Used for graphic Ads</description>
        <label>Item - Ad</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Chart</fullName>
        <active>true</active>
        <description>Used to display reports or charts</description>
        <label>Item - Chart</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Event</fullName>
        <active>true</active>
        <description>Scheduled Events</description>
        <label>Item - Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Feature</fullName>
        <active>true</active>
        <description>Used for Daily or Weekly items, such as Job of the Day or Talent Tip of the Week</description>
        <label>Item - Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Firm_Initiative</fullName>
        <active>true</active>
        <description>Used for Member Impact stories</description>
        <label>Item - Firm Initiative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Link</fullName>
        <active>true</active>
        <description>Menu or Icon link with a related URL or Action</description>
        <label>Item - Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_News</fullName>
        <active>true</active>
        <description>News Article or Announcement used in News Carousel or Office News</description>
        <label>Item - News</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Page</fullName>
        <active>true</active>
        <description>Used to display a basic section of text and an optional image</description>
        <label>Item - Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Poll</fullName>
        <active>true</active>
        <description>Used for Chatter Polls</description>
        <label>Item - Poll</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Trending</fullName>
        <active>true</active>
        <description>Used to display Trending items or articles</description>
        <label>Item - Trending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Video</fullName>
        <active>true</active>
        <description>Used for linked Video items such as Vimeo</description>
        <label>Item - Video</label>
    </recordTypes>
    <recordTypes>
        <fullName>Settings_Category</fullName>
        <active>true</active>
        <description>Selections for Main Category for use on Intranet Items</description>
        <label>Settings - Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Settings_Color_Set</fullName>
        <active>true</active>
        <description>Pre-defined Color Sets for use on Intranet Items</description>
        <label>Settings - Color Set</label>
    </recordTypes>
    <recordTypes>
        <fullName>Settings_Image_Set</fullName>
        <active>true</active>
        <description>Pre-defined Image Sets for use on Intranet Items</description>
        <label>Settings - Image Set</label>
    </recordTypes>
    <recordTypes>
        <fullName>Settings_Office</fullName>
        <active>true</active>
        <description>Advisory Board Office Locations</description>
        <label>Settings - Office</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Deactivate_Default_Content_Item</fullName>
        <active>true</active>
        <description>Prevent an item used as Default Content from be set to Inactive.</description>
        <errorConditionFormula>Default_Content_Flag__c = TRUE &amp;&amp; ISPICKVAL(Active_Status__c, &quot;Inactive&quot;)</errorConditionFormula>
        <errorMessage>Cannot Deactivate a Default Content Item.  Remove it from the Container first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Citation_reqd_Item_Type_is_Talent_Item</fullName>
        <active>true</active>
        <description>Citation is required when Item Type = ‘Talent Item’</description>
        <errorConditionFormula>AND( 
RecordType.Name = &quot;Item - Feature&quot;, 
ISPICKVAL(Item_Type__c , &quot;Talent Item&quot;), 
ISBLANK(Citation__c)
)</errorConditionFormula>
        <errorMessage>Citation is required when Item Type = Talent Item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Change_of_Configuration_Item</fullName>
        <active>true</active>
        <description>Prevent change to a Configuration item unless the user also selects the &apos;Change Configuration Item&apos; field</description>
        <errorConditionFormula>AND( Configuration_Item__c = TRUE,
 Change_Configuration_Item__c = FALSE,
 NOT( ISCHANGED(Chatter_Comments_Rollup__c) ),
 NOT( ISCHANGED(Chatter_Likes__c) ),
 NOT( ISCHANGED(Chatter_Shares__c) ),
 NOT( ISCHANGED(View_Count__c) ) )</errorConditionFormula>
        <errorMessage>This is a Configuration Item and cannot be changed unless used with the &apos;Change Configuration Item&apos; checkbox</errorMessage>
    </validationRules>
</CustomObject>